<resources>
    <string name="app_name">Samsung Health</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="health_rythm_types">
        <item>High</item>
        <item>Normal</item>
        <item>Low</item>
    </string-array>
    <string name="select_health_rythm_type">Select Health Type</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="track_your_health">Track Your Health</string>
    <string name="select_date_and_time">Select Date and Time</string>
    <string name="energy_score">Energy Score</string>
    <string name="sleep_tracking">Sleep Tracking</string>
    <string name="workout">Workout</string>
    <string name="steps">Steps</string>
    <string name="health_record_details">Health Record Details</string>
    <string name="enter_your_sugar_level">Enter your sugar level</string>
    <string name="sleep_duration_hours">Sleep Duration (Hours)</string>
    <string name="select_activity_level">Select Activity Level</string>
    <string name="select_symptoms">Select Symptoms:</string>
    <string name="submit_health_data">Submit Health Data</string>
    <string name="show_date">Show Date</string>
    <string name="time_will_be_displayed_here">Time will be displayed here</string>
    <string name="edit_your_information">Edit your information</string>
    <string name="chest_pain">Chest Pain</string>
    <string name="dizziness">Dizziness</string>
    <string name="fatigue">Fatigue</string>
    <string name="high">High</string>
    <string name="moderate">Moderate</string>
    <string name="low">Low</string>
    <string name="date_label">📅 Date: %s</string>
    <string name="time_label">⏰ Time: %s</string>
    <string name="activity_label">🏃 Activity: %s</string>
    <string name="sugar_label">🍬 Sugar Level: %d mg/dL</string>
    <string name="sleep_label">💤 Sleep: %d hrs</string>
    <string name="conditions_label">⚠️ Conditions: %s</string>
    <string name="no_diseases">✅ No diseases detected</string>
    <string name="none">None</string>

    <string name="content_desc_date">Date of health record is %s</string>
    <string name="content_desc_time">Recorded at %s</string>
    <string name="content_desc_activity">Activity level recorded as %s</string>
    <string name="content_desc_sugar">Blood sugar level is %d milligrams per deciliter</string>
    <string name="content_desc_sleep">Total sleep duration is %d hours</string>
    <string name="content_desc_conditions">Detected conditions: %s</string>
    <string name="content_desc_no_conditions">No detected health issues</string>
    <string name="see_history">See History</string>
    <string name="add_record">Add Record</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="details_card">Details Card</string>
    <string name="home_page">Samsung Health</string>
    <string name="records_page">Health Records</string>
    <string name="details_page">Details Info</string>
    <string name="edit_page">Edit Record</string>
    <string name="record_input">Record Info</string>



</resources>