<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbarStyle="outsideOverlay"
    android:padding="@dimen/padding_medium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_small">

        <androidx.cardview.widget.CardView
            android:id="@+id/energyScoreCard"
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_gravity="center"
            app:cardCornerRadius="@dimen/card_corner_radius_mid"
            app:cardElevation="@dimen/card_elevation_mid"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="@dimen/padding_medium">

                <ImageView
                    android:layout_width="@dimen/image_size"
                    android:layout_height="@dimen/image_size"
                    android:src="@drawable/ic_energy_score"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/energy_score"
                    android:textSize="@dimen/text_large"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Sleep Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/sleepCard"
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_gravity="center"
            app:cardCornerRadius="@dimen/card_corner_radius_mid"
            app:cardElevation="@dimen/card_elevation_mid"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="@dimen/padding_medium">

                <ImageView
                    android:layout_width="@dimen/image_size"
                    android:layout_height="@dimen/image_size"
                    android:src="@drawable/ic_sleep"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sleep_tracking"
                    android:textSize="@dimen/text_large"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Workout Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/workoutCard"
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_gravity="center"
            app:cardCornerRadius="@dimen/card_corner_radius_mid"
            app:cardElevation="@dimen/card_elevation_mid"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="@dimen/padding_medium">

                <ImageView
                    android:layout_width="@dimen/image_size"
                    android:layout_height="@dimen/image_size"
                    android:src="@drawable/ic_workout"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/workout"
                    android:textSize="@dimen/text_large"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Steps Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/stepsCard"
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_gravity="center"
            app:cardCornerRadius="@dimen/card_corner_radius_mid"
            app:cardElevation="@dimen/card_elevation_mid"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="@dimen/padding_medium">

                <ImageView
                    android:layout_width="@dimen/image_size"
                    android:layout_height="@dimen/image_size"
                    android:src="@drawable/ic_steps"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/steps"
                    android:textSize="@dimen/text_large"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>
